package eapli.base.sharedboard.domain;


public enum CellState {
    OCCUPIED, FREE;
}