package eapli.base.sharedboard.domain;


public enum Permission {
    READ,READANDWRITE;
}